tests/fixtures/invalid/sorted_bool.py
# Cannot call sorted() with Bool
x = sorted(True)
